--- a/test/fixtures/districts.yml
+++ b/test/fixtures/districts.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: districts
+#
+#  id         :integer          not null, primary key
+#  en_name    :string(255)
+#  cn_name    :string(255)
+#  parent_id  :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
