finish index for coupon view

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -2,20 +2,20 @@
 #
 # Table name: products
 #
-#  id             :integer          not null, primary key
-#  shop_name      :string(255)
-#  product_name   :string(255)
-#  image_path     :string(255)
-#  cover_name     :string(255)
-#  sale_price     :float
-#  original_price :float
-#  sale_count     :integer
-#  overtime_at    :datetime
-#  content        :text
-#  category_id    :integer
-#  district_id    :integer
-#  created_at     :datetime         not null
-#  updated_at     :datetime         not null
+#  id          :integer          not null, primary key
+#  title       :string(255)
+#  image       :string(255)
+#  discount    :float
+#  begin_at    :datetime
+#  end_at      :datetime
+#  address     :string(255)
+#  phone       :string(255)
+#  sale_count  :integer
+#  content     :text
+#  category_id :integer
+#  district_id :integer
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
